Issue 13047: **Assay Id and other column values cutoff in Manage Guide Set grids Issue 13035: **Add run date, EC50, High MFI, and AUC to grids on Manage Guide Set page

--- a/luminex/webapp/GuideSet.css
+++ b/luminex/webapp/GuideSet.css
@@ -1,4 +1,4 @@
 
 .highlight {
-    background-color: #ffff9c;
+    background-color: #C0C0C0;
 }
